[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiktoken-cli"
version = "0.1.0"
description = "TikToken CLI tool for managing development environment"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "rich",
    "pytest-asyncio",
    "httpx",
    "pytest",
    "pytest-docker",
    "docker",
    "boto3",
    "click",
    "aiohttp"
]

[tool.hatch.metadata]
allow-direct-references = true
