[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiktoken-cli"
version = "0.1.0"
description = "TikToken development CLI - Container-First Development Tool"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "rich",
    "pytest-asyncio",
    "httpx",
    "pytest",
    "pytest-docker",
    "docker",
    "boto3",
    "click",
    "aiohttp"
]

[project.scripts]
t = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
